[package]
name = "fe2o3-glow"
version = "0.1.5"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal image display via kitty/sixel/w3m protocols. Feature clone of termpix."
license = "Unlicense"
repository = "https://github.com/isene/glow"
keywords = ["terminal", "image", "kitty", "sixel", "tui"]
categories = ["command-line-interface", "multimedia::images"]

[lib]
name = "glow"

[dependencies]
base64 = "0.22"
libc = "0.2"
