[package]
name = "fe2o3-glow"
version = "0.1.18"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal image display via kitty/sixel/w3m/braille protocols. Feature clone of termpix."
license = "Unlicense"
repository = "https://github.com/isene/glow"
keywords = ["terminal", "image", "kitty", "sixel", "tui"]
categories = ["command-line-interface", "multimedia::images"]

[lib]
name = "glow"

[dependencies]
base64 = "0.22"
libc = "0.2"
# Rust-native image decoding + resize + re-encode. Replaces the
# `convert` (ImageMagick) subprocess fork on the hot path. Default
# features cover PNG / JPEG / GIF / WebP / BMP — enough for every
# attachment kastrup actually shows.
image = { version = "0.25", default-features = false,
          features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
